--- a/homework.ipynb
+++ b/homework.ipynb
@@ -3991,17 +3991,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CHANGES HERE\n",
-    "p19 = o19.set_index(\"city\").join(c19.set_index(\"city\")[[\"country\"]]).reset_index()\n"
+    "p19 = o19.set_index(\"city\").join(c19.set_index(\"city\")[[\"country\"]]).reset_index()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -4249,7 +4250,7 @@
        "29           paris  2024         france"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
